--- a/contact_me.html
+++ b/contact_me.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Atsuko Kondo | Home</title>
+    <title>Atsuko Kondo | Contact</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
@@ -17,25 +17,27 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="about_me.html" >About</a></li>
-          <li><a href="contact_me.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about_me.html">About</a></li>
+          <li><a href="contact_me.html" class="selected">Contact</a></li>
         </ul>
       </nav>
       <div id="logo">
         <img src="image profile.jpeg" alt="">
         <h1><strong>Atsuko Kondo</strong></h1>
       </div>
-    </header> 
-      <div class="container">
+      </header>
+    <div class="container">
       <section>
-        <h2>Home</h2>
-        <p>Welcome to Atsuko Kondo's Portfolio!!!</p>
-        <p>You can find out more at <a href="about_me.html"><strong>About</strong></a>.</p>
+        <h2>Contact</h2>
+        <ul>
+            <li><a href="https://twitter.com/atkox210715" target="_blank">Twitter</a></li>
+            <li><a href="https://github.com/atkox" target="_blank">Github</a></li>
+        </ul>
       </section>
       <footer>
         <p>&copy; 2016 Atsuko Kondo.</p>
       </footer>
-    </div>    
+    </div>  
   </body>
-</html>
+</html>      
