--- a/about_me.html
+++ b/about_me.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div id="logo">
-        <img src="image profile.jpeg" alt="">
+        <img src="image_profile.jpeg" alt="">
         <h1><strong>Atsuko Kondo</strong></h1>
       </div>
     </header> 
@@ -64,7 +64,7 @@
            <div class="col-xs-6 col-sm-6 col-md-3 col-ld-3">
                <div class ="portfolio-app text-center">
                    <h4>Original service</h4>
-                   <img src="original service.jpg" alt="" />
+                   <img src="original_service.jpg" alt="" />
                    <p>Final step "Original service"</p>
                </div>
            </div> 
