--- a/contact_me.html
+++ b/contact_me.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <div id="logo">
-        <img src="image profile.jpeg" alt="">
+        <img src="image_profile.jpeg" alt="">
         <h1><strong>Atsuko Kondo</strong></h1>
       </div>
       </header>
