--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name= "description" content="Atsuko Kondo's Portfolio">
     <title>Atsuko Kondo | Home</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -23,7 +24,7 @@
         </ul>
       </nav>
       <div id="logo">
-        <img src="image profile.jpeg" alt="">
+        <img src="image_profile.jpeg" alt="">
         <h1><strong>Atsuko Kondo</strong></h1>
       </div>
     </header> 
